package com.kanzu.flibook.ui.fromfile;

import androidx.lifecycle.LiveData;
import androidx.lifecycle.MutableLiveData;
import androidx.lifecycle.ViewModel;

public class FromFileViewModel extends ViewModel {

}