@startuml

title __FLIBOOK.APP's Class Diagram__\n

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.BookData {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Bookmark {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.BuildConfig {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.CustomFileListAdapter {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.CustomListAdapter {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.DataFragment {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.HighlightData {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.MainActivity {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.MyThread {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Network {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.PdfActivity {
    }
  }
  

  namespace com.kanzu.flibook {
    class com.kanzu.flibook.Storage {
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.fromfile {
      class com.kanzu.flibook.ui.fromfile.FromFileFragment {
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.fromfile {
      class com.kanzu.flibook.ui.fromfile.FromFileViewModel {
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.library {
      class com.kanzu.flibook.ui.library.LibraryFragment {
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.library {
      class com.kanzu.flibook.ui.library.LibraryViewModel {
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.search {
      class com.kanzu.flibook.ui.search.SearchFragment {
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.search {
      class com.kanzu.flibook.ui.search.SearchViewModel {
      }
    }
  }
  

  com.kanzu.flibook.BookData .up.|> android.os.Parcelable
  com.kanzu.flibook.CustomFileListAdapter -up-|> android.widget.ArrayAdapter
  com.kanzu.flibook.CustomListAdapter -up-|> android.widget.ArrayAdapter
  com.kanzu.flibook.DataFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.DataFragment o-- com.kanzu.flibook.BookData : book
  com.kanzu.flibook.DataFragment o-- com.kanzu.flibook.databinding.FragmentDataBinding : binding
  com.kanzu.flibook.HighlightData .up.|> com.folioreader.model.HighLight
  com.kanzu.flibook.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kanzu.flibook.MainActivity o-- com.kanzu.flibook.databinding.ActivityMain2Binding : binding
  com.kanzu.flibook.MyThread .up.|> java.lang.Runnable
  com.kanzu.flibook.MyThread o-- com.kanzu.flibook.BookData : book
  com.kanzu.flibook.PdfActivity .up.|> com.github.barteksc.pdfviewer.listener.OnPageChangeListener
  com.kanzu.flibook.PdfActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kanzu.flibook.PdfActivity o-- com.kanzu.flibook.Bookmark : bookmark
  com.kanzu.flibook.ui.fromfile.FromFileFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.fromfile.FromFileFragment o-- com.kanzu.flibook.databinding.FragmentFromfileBinding : binding
  com.kanzu.flibook.ui.fromfile.FromFileFragment o-- com.kanzu.flibook.ui.fromfile.FromFileViewModel : fromFileViewModel
  com.kanzu.flibook.ui.fromfile.FromFileViewModel -up-|> androidx.lifecycle.ViewModel
  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.FolioReader.OnClosedListener
  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.util.OnHighlightListener
  com.kanzu.flibook.ui.library.LibraryFragment .up.|> com.folioreader.util.ReadLocatorListener
  com.kanzu.flibook.ui.library.LibraryFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.CustomFileListAdapter : adapter
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.databinding.FragmentLibraryBinding : binding
  com.kanzu.flibook.ui.library.LibraryFragment o-- com.kanzu.flibook.ui.library.LibraryViewModel : libraryViewModel
  com.kanzu.flibook.ui.library.LibraryViewModel -up-|> androidx.lifecycle.ViewModel
  com.kanzu.flibook.ui.search.SearchFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.search.SearchFragment o-- com.kanzu.flibook.databinding.FragmentSearchBinding : binding
  com.kanzu.flibook.ui.search.SearchFragment o-- com.kanzu.flibook.ui.search.SearchViewModel : searchViewModel
  com.kanzu.flibook.ui.search.SearchViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
